--- a/backend/Million.Api/appsettings.Development.json
+++ b/backend/Million.Api/appsettings.Development.json
@@ -1,8 +1,9 @@
 {
+  "MongoSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "MillionDb"
+  },
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+    "LogLevel": { "Default": "Information", "Microsoft": "Warning", "Microsoft.Hosting.Lifetime": "Information" }
   }
 }
